# opendocs

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROMPT_S0S1.md  README.md  README_先看这个.md  pyproject.toml  run_audit.sh  settings.example.toml  需求文档_工程化修订版.md
.claude/: settings.json
.codex/: config.toml
.github/workflows/: ci.yml
demo/: project_overview.md
docs/: S0S1audit.md
docs/acceptance/: acceptance_cases.md  tasks.yaml
docs/acceptance/artifacts/: README.md
docs/adr/: 0001-baseline.md  0002-source-root-deferred-to-s3.md  0003-dual-track-schema.md  0004-single-db-for-mvp.md  0005-audit-target-type-extension.md  0006-file-operation-service-in-s1.md  0007-fts5-chinese-tokenizer.md  0008-charset-normalizer.md  0009-pdf-heading-path-limitation.md  0010-normalization-offset-semantics.md  0011-docx-table-heading-path.md  0012-fts5-trigram-with-dense-fallback.md  0013-db-backed-derived-artifact-state.md  0014-source-root-schema-integrity.md
docs/architecture/: overview.md
docs/guides/: OpenDocs_Codex_从零到一小白执行手册.md  OpenDocs_Codex_阶段提示词清单.md
docs/prompts/: codex_operator_prompt.md
docs/specs/: OpenDocs_工程实施主规范_v1.0.md
docs/test-plan/: S0_stage_report.md  S1_stage_report.md  S2_stage_report.md  S2audit.md  S3_stage_report.md  S4_stage_report.md  S5_stage_report.md
scripts/: __init__.py  bootstrap_dev.py  capture_s4_tc005_artifacts.py  capture_s4_tc018_artifacts.py  generate_fixture_corpus.py  init_db.py  rebuild_index.py  run_acceptance.py  run_static_checks.py  seed_demo_data.py
src/opendocs/: __init__.py  __main__.py  exceptions.py  runtime_paths.py
src/opendocs/acceptance/: __init__.py  s4_capture_harness.py
src/opendocs/app/: __init__.py  _audit_helpers.py  archive_service.py  file_operation_service.py  generation_service.py  index_service.py  memory_service.py  qa_service.py  runtime.py  search_service.py  source_service.py  summary_service.py
src/opendocs/audit/: __init__.py  rollback.py
src/opendocs/classification/: __init__.py  classifier.py  models.py  path_planner.py
src/opendocs/cli/: main.py
src/opendocs/config/: __init__.py  settings.py
src/opendocs/domain/: __init__.py  document_metadata.py  locator.py  models.py
src/opendocs/generation/: __init__.py  draft_pipeline.py  insight_extractor.py  markdown_exporter.py  models.py  summary_pipeline.py
src/opendocs/indexing/: __init__.py  chunker.py  dense_artifact_paths.py  hnsw_manager.py  index_builder.py  scanner.py  semantic_indexer.py  watcher.py
src/opendocs/memory/: __init__.py  policy.py  service.py
src/opendocs/parsers/: __init__.py  _encoding.py  base.py  docx_parser.py  md_parser.py  normalization.py  pdf_parser.py  txt_parser.py
src/opendocs/provider/: __init__.py  _http.py  anthropic_adapter.py  base.py  keystore.py  mock.py  ollama.py  openai_compat.py  service.py
src/opendocs/qa/: __init__.py  citation_validator.py  conflict_detector.py  context_budget.py  evidence_gate.py  generator.py  insight_extractor.py  markdown_exporter.py  models.py  orchestrator.py  prompts.py  qa_pipeline.py  summarizer.py
src/opendocs/retrieval/: __init__.py  dense_searcher.py  embedder.py  evidence.py  evidence_locator.py  filters.py  fts_searcher.py  query_lexicon.py  query_preprocessor.py  rerank.py  search_pipeline.py  stage_acceptance_capture_cases.py  stage_acceptance_corpora.py  stage_acceptance_provenance.py  stage_asset_loader.py  stage_filter_cases.py  stage_golden_queries.py  stage_search_corpus.py
src/opendocs/storage/: __init__.py  db.py
tests/e2e/: __init__.py  test_desktop_demo.py
tests/fixtures/: __init__.py
tests/golden/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: test_bootstrap_dev.py  test_config_settings.py  test_logging_redaction.py  test_smoke.py
(+166 files in other folders)
