[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendocs"
version = "0.1.0"
description = "OpenDocs local-first desktop AI document manager baseline."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "OpenDocs Team" }]
dependencies = [
  "pydantic>=2.7,<3.0",
  "SQLAlchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-qt>=4.4,<5.0",
  "pytest-cov>=5.0,<6.0",
  "PySide6>=6.8,<7.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
opendocs = "opendocs.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opendocs.storage.schema" = ["*.sql"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
