[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendocs"
version = "0.1.0"
description = "OpenDocs local-first desktop AI document manager baseline."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "OpenDocs Team" }]
dependencies = [
  "pydantic>=2.7,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "charset-normalizer>=3.3,<4.0",
  "python-docx>=1.1,<2.0",
  "PyMuPDF>=1.24,<2.0",
  "pypdf>=4.3,<6.0",
]

# NOTE: S3 进入前需梳理依赖分组——stack 中的 watchdog/hnswlib 等是核心
# 运行时依赖，如需 `pip install opendocs` 即可完整使用，应迁回 dependencies。
# 当前分组不影响 S2 功能正确性。
[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-qt>=4.4,<5.0",
  "pytest-cov>=5.0,<6.0",
  "PySide6>=6.8,<7.0",
  "ruff>=0.5,<1.0",
]
stack = [
  "watchdog>=4.0,<5.0",
  "hnswlib>=0.8,<0.9",
  "Jinja2>=3.1,<4.0",
  "keyring>=25.0,<26.0",
  "pyinstaller>=6.0,<7.0",
]

[project.scripts]
opendocs = "opendocs.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opendocs.storage.schema" = ["*.sql"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
